Stopped overflow of PopularPairs table

--- a/front-end/src/styles/StatsPage.css
+++ b/front-end/src/styles/StatsPage.css
@@ -2,7 +2,7 @@
   background-color: white;
   border: 1px solid red;
   position: relative;
-  width: 500px;
+  width: 750px;
   height: 500px;
 }
 
@@ -50,7 +50,7 @@
   background-color: white;
   border: 1px solid red;
   position: relative;
-  width: 500px;
+  width: 750px;
   height: 500px;
 }
 
